--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,9 @@
   <load src="./partials/header.html" />
 
   <main>
-    <h1>HOME PAGE</h1>
     <!-- Loads the specified .html file -->
     <!-- load src="./partials/vite-promo.html" / -->
-    <!-- load src="./partials/badges.html" / -->
+    <load src="./partials/main-content.html" />
   </main>
 
   <load src="./partials/footer.html" />
