--- a/src/teachers.html
+++ b/src/teachers.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Page 2</title>
+  <title>Teachers</title>
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
@@ -17,7 +19,7 @@
       <h1 class="main-title">
         <span class="main-title-gradient">Welcome</span> to page TEACHERS
       </h1>
-      <load src="./partials/back-link.html" />
+      <!-- <load src="./partials/back-link.html" /> -->
     </div>
   </main>
 
