--- a/src/teachers.html
+++ b/src/teachers.html
@@ -5,9 +5,18 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Teachers</title>
+  <meta property="og:title" content="LearnLingo" />
+  <meta property="og:description" content="Unlock your potential with the best  language tutors" />
+  <meta property="og:image"
+    content="https://res.cloudinary.com/dyounr2tf/image/upload/v1766178560/68e4226188648a055ee1b42bed644f46-sticker_2_hr6xkl.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image:alt" content="language" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
