teachers markup in progress

--- a/src/teachers.html
+++ b/src/teachers.html
@@ -25,10 +25,10 @@
 
   <main>
     <div class="container">
-      <h1 class="main-title">
-        <span class="main-title-gradient">Welcome</span> to page TEACHERS
-      </h1>
+      <load src="./partials/filters.html" />
       <!-- <load src="./partials/back-link.html" /> -->
+      <load src="./partials/teachers-list.html" />
+
     </div>
   </main>
 
