--- a/src/teachers.html
+++ b/src/teachers.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
-<body>
+<body class="body-teachers">
   <load src="./partials/header.html" icon-path="./img/sprite.svg#icon-ukraine" highlight-act="active" />
 
   <main>
