--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
 
   <main>
     <load src="./partials/main-content.html" />
+    <load src="./partials/test-svg.html" />
+
   </main>
 
   <load src="./partials/footer.html" />
