--- a/src/teachers.html
+++ b/src/teachers.html
@@ -26,6 +26,8 @@
   <main>
     <div class="container">
       <load src="./partials/filters.html" />
+      <load src="./partials/test-svg.html" />
+
       <!-- <load src="./partials/back-link.html" /> -->
       <load src="./partials/teachers-list.html" />
 
