--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <load src="./partials/svg-sprite.html" />
+  <!-- <load src="./partials/svg-sprite.html" /> -->
 
   <load src="./partials/header.html" />
 
