--- a/src/teachers.html
+++ b/src/teachers.html
@@ -26,7 +26,8 @@
   <main>
     <div class="container">
       <load src="./partials/filters.html" />
-
+      <load src="./partials/test-svg.html" />
+      <div class="test-svg"></div>
       <!-- <load src="./partials/back-link.html" /> -->
       <load src="./partials/teachers-list.html" />
 
