--- a/src/teachers.html
+++ b/src/teachers.html
@@ -35,7 +35,7 @@
   <load src="./partials/footer.html" />
 
   <load src="./partials/modal.html" />
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="./main-teachers.js"></script>
 
 </body>
 
