--- a/src/teachers.html
+++ b/src/teachers.html
@@ -26,16 +26,15 @@
   <main>
     <div class="container">
       <load src="./partials/filters.html" />
-      <!-- <load src="./partials/back-link.html" /> -->
       <load src="./partials/teachers-list.html" />
-
     </div>
   </main>
 
   <load src="./partials/footer.html" />
-
   <load src="./partials/modal.html" />
-  <script type="module" src="./main-teachers.js"></script>
+
+  <script type="module" src="./main.js"></script>
+  <script type="module" src="./teachers-page.js"></script>
 
 </body>
 
