--- a/src/favorites.html
+++ b/src/favorites.html
@@ -25,6 +25,7 @@
 
   <main>
     <div class="container">
+      <h2 class="my-favorites">My favorites teachers</h2>
       <load src="./partials/filters.html" />
       <!-- <load src="./partials/teachers-list.html" /> -->
       <ul class="teachers-list favorites-list"></ul>
@@ -35,7 +36,6 @@
   <load src="./partials/modal.html" />
 
   <script type="module" src="./main.js"></script>
-  <!-- <script type="module" src="./teachers-page.js"></script> -->
   <script type="module" src="./main-favorites.js"></script>
 
 </body>
